.provarCaches/00D5f000005vwGkEAI/objects/rstkf__ufxhead__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_ufxhead</customHelpPage>
    <description>ufxhead__c</description>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_allaccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, all GL Accounts having Fx Types of Monetary Cash and Monetary Non-Cash will be selected, and From GL Account and Through GL Account will be ignored. Must be checked if Official Period-end Version? is checked.</inlineHelpText>
        <label>All Accounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_effdate__c</fullName>
        <inlineHelpText>This is the effective date of the exchange rates to be used.  It defaults to Date Generated but can be overridden.</inlineHelpText>
        <label>As of Date Exchange Rate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_fromacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If filled in, GL Accounts having Fx Types of Monetary Cash and Monetary Non-Cash starting from this account will be selected.</inlineHelpText>
        <label>From GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>UFX Runs (From GL Account)</relationshipLabel>
        <relationshipName>ufxheadsfrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_gains__c</fullName>
        <inlineHelpText>The total value of all gains on unrealized foreign exchange calculated for the run.</inlineHelpText>
        <label>Total Gains</label>
        <summarizedField>rstkf__ufxacctsum__c.rstkf__ufxacctsum_gains__c</summarizedField>
        <summaryForeignKey>rstkf__ufxacctsum__c.rstkf__ufxacctsum_ufxhead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The company that has performed or will perform a UFX run. Is set to the user’s current company.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>UFX Runs</relationshipLabel>
        <relationshipName>ufxheads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_gltrandate__c</fullName>
        <inlineHelpText>This will become the Transaction Date and the Accounting Date of any GL transactions posted for the run.</inlineHelpText>
        <label>GL Txn Date to Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_losses__c</fullName>
        <inlineHelpText>The total value of all losses on unrealized foreign exchange calculated for the run.</inlineHelpText>
        <label>Total Losses</label>
        <summarizedField>rstkf__ufxacctsum__c.rstkf__ufxacctsum_losses__c</summarizedField>
        <summaryForeignKey>rstkf__ufxacctsum__c.rstkf__ufxacctsum_ufxhead__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_name__c</fullName>
        <formula>rstkf__ufxhead_glcmp__r.Name &amp; &quot; - &quot; &amp; rstkf__ufxhead_runno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFX Run Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_postable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the run may be posted to the GL.</inlineHelpText>
        <label>Official Period-end Version?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_postdate__c</fullName>
        <inlineHelpText>Blank if Posting Status is not checked. Otherwise this is the date on which GL transactions were posted for the run.</inlineHelpText>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, GL transactions have been created and posted for the run.</inlineHelpText>
        <label>Posting Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_poststatus__c</fullName>
        <inlineHelpText>Set automatically to one of four values:
Non-Posting Run
Already Posted
Bad Detail Records Exist
Eligible to Post</inlineHelpText>
        <label>Eligible for Posting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Posting Run</fullName>
                    <default>true</default>
                    <label>Non-Posting Run</label>
                </value>
                <value>
                    <fullName>Already Posted</fullName>
                </value>
                <value>
                    <fullName>Bad Data / Detail Records Exist</fullName>
                </value>
                <value>
                    <fullName>Eligible to Post</fullName>
                </value>
                <value>
                    <fullName>Bad Detail Records Exist</fullName>
                    <isActive>false</isActive>
                    <label>Bad Detail Records Exist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_rundate__c</fullName>
        <inlineHelpText>This is the system date in effect when the UFX run was started. It has no significance except to help users distinguish among UFX runs.</inlineHelpText>
        <label>Date Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_runno__c</fullName>
        <description>Run Number</description>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>An auto-numbered field that uniquely identifies a run of the UFX process.</inlineHelpText>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_schedtype__c</fullName>
        <inlineHelpText>Will have one of two values:
Month End Spot Rate
Current Spot Rate
Must be Month End Spot Rate if Official Period-end Version? is checked.</inlineHelpText>
        <label>Exchange Rate Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month End Spot Rate</fullName>
                </value>
                <value>
                    <fullName>Current Spot Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_thruacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If filled in, GL Accounts having Fx Types of Monetary Cash and Monetary Non-Cash ending with this account will be selected.</inlineHelpText>
        <label>Through GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>UFX Runs (Through GL Account)</relationshipLabel>
        <relationshipName>ufxheadsthru</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxhead_txncutoffdate__c</fullName>
        <inlineHelpText>Defaults to As of Date Exchange Rate but can be overridden. No transactions dated after Cut Off Date will be processed, but transactions dated on it will be.</inlineHelpText>
        <label>Cut Off Date</label>
        <type>Date</type>
    </fields>
    <label>UFX Run</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UFX Run</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UFX Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>